--- a/index.html
+++ b/index.html
@@ -15,15 +15,27 @@
 </head>
 
 <body>
-    <h1>My test list</h1>
-    <p>My lists:</p><br>
+    <h1>My test list</h1><hr>
+<div class="mycol">
+    <div style="display: inline-block;">
+    <p>My lists:</p>
     <ul>
         <li><a href="page1.html" target="_blank">page 1</a></li>
         <li><a href="page2.html" target="_blank">page 2</a></li>
         <li><a href="page3.html" target="_blank">page 3</a></li>
         <li><a href="mailto:nowhere@mozilla.org?cc=name2@rapidtables.com&bcc=name3@rapidtables.com&subject=The%20subject%20of%20the%20email&body=The%20body%20of%20the%20email">Send mail</a></li>
-    </ul><br>
+        <li><a href="page1.html" target="_blank">page 4</a></li>
+        <li><a href="page2.html" target="_blank">page 5</a></li>
+        <li><a href="page3.html" target="_blank">page 6</a></li>
+    </ul>
+    </div>
     
-    <img class="img" src="https://miro.medium.com/max/1200/1*mk1-6aYaf_Bes1E3Imhc0A.jpeg" alt="test image">
+
+    <div>
+    <img src="https://miro.medium.com/max/1200/1*mk1-6aYaf_Bes1E3Imhc0A.jpeg" alt="test image">
+    </div>
+    
+</div>
+<hr>
 </body>
 </html>
