--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <h1>My test list</h1><hr>
 <div class="mycol">
-    <div style="display: inline-block;">
+    <div style="display: inline-block; text-align: center;">
     <p>My lists:</p>
     <ul>
-        <li><a href="page1.html" target="_blank">page 1</a></li>
+        <li><a href="practice.html" target="_blank">page 1</a></li>
         <li><a href="page2.html" target="_blank">page 2</a></li>
         <li><a href="page3.html" target="_blank">page 3</a></li>
         <li><a href="mailto:nowhere@mozilla.org?cc=name2@rapidtables.com&bcc=name3@rapidtables.com&subject=The%20subject%20of%20the%20email&body=The%20body%20of%20the%20email">Send mail</a></li>
