--- a/practice.html
+++ b/practice.html
@@ -18,7 +18,6 @@
     }
     .nav-bar{
         background-color: violet;
-        margin: auto 240px;
     }
     .nav-area{
         display: flex;
@@ -27,8 +26,12 @@
     }
     .nav-area li{
         list-style: none;
-        padding: 10px 20px;
+        padding: 10px 0px;
         font-size: 20px;
+        display: inline-block;
+        text-align: center;
+        margin: 0px auto;
+        
     }
 </style>
 
