--- a/page3.html
+++ b/page3.html
@@ -1,5 +1,33 @@
+<style>
+    *{
+        margin: 0px;
+        padding: 0px;
+    }
+    html{
+        background-color: black;
+    }
+    p{
+        border-color: chartreuse;
+        border-style: solid;
+        color: white;
+        padding: 10px;
+        font-size: 20px;
+    }
+    ul{
+        color:cornsilk;
+    }
+    
+</style>
+
+
 <html>
-    <header>
-        <h1>Page 3</h1>
-    </header>
+    <body>
+        <p>This is a short paragraph</p>
+        <ul>
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+        </ul>
+    </body>
 </html>
