--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,38 @@
+ <style>
+       table,
+      th,
+      td {
+        padding: 10px;
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+ </style>
+
+
+<!DOCTYPE html>
 <html>
-    <header>
-        <h1>Page 2</h1>
-    </header>
+  <head>
+    <meta charset="utf-8">
+    <title>Simple table</title>
+    <link href="minimal-table.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <h1>Simple table</h1>
+    <table>
+        <th>heading2</th>
+      <tr>
+        <td>Hi, I'm your first cell.</td>
+        <td>I'm your second cell.</td>
+        <td>I'm your third cell.</td>
+        <td>I'm your fourth cell.</td>
+      </tr>
+    
+      <tr>
+        <td>Second row, first cell.</td>
+        <td>Cell 2.</td>
+        <td>Cell 3.</td>
+        <td>Cell 4.</td>
+      </tr>
+    </table>
+  </body>
 </html>
