--- a/page3.html
+++ b/page3.html
@@ -35,7 +35,10 @@
         border-style: solid;
         padding: 3px;
         margin: 3px;
-        
+    }
+    body{
+        background-color: rgb(17, 16, 16);
+        margin: 0px 200px;
     }
     
 </style>
