--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,35 @@
+<style>
+input[type='text'],
+input[type='email']{
+    border: 2px solid #000;
+    margin: 0 0 1em 0;
+    padding: 10px;
+  width: 100%;
+}
+input[type="submit"] {
+  border: 3px solid #333;
+  background-color: #999;
+  border-radius: 5px;
+  padding: 10px 2em;
+  font-weight: bold;
+  color: #fff;
+}
+input[type="submit"]:hover {
+  background-color: #333;
+}
+</style>  
+
+
 <html>
-    <header>
-        <h1>Test Page</h1>
-    </header>
+<body>
+    <form>
+        <div><label for="name">Name</label>
+        <input type="text" id="name"></div>
+
+        <div><label for="email">Email</label>
+        <input type="email" id="email"></div>
+
+        <div><input type="submit" value="submit"></div>
+    </form>
+</body>
 </html>
