--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div style="display: inline-block; text-align: center;">
     <p>My lists:</p>
     <ul>
+        <li><a href="responsive.html" target="_blank">responsive</a></li>
         <li><a href="mysite.html" target="_blank">mysite</a></li>
         <li><a href="practice.html" target="_blank">page 1</a></li>
         <li><a href="page2.html" target="_blank">page 2</a></li>
