--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="page3.html" target="_blank">page 3</a></li>
         <li><a href="mailto:nowhere@mozilla.org?cc=name2@rapidtables.com&bcc=name3@rapidtables.com&subject=The%20subject%20of%20the%20email&body=The%20body%20of%20the%20email">Send mail</a></li>
         <li><a href="myflex.html" target="_blank">myflex</a></li>
-        <li><a href="page2.html" target="_blank">page 5</a></li>
+        <li><a href="grids.html" target="_blank">grids</a></li>
         <li><a href="page3.html" target="_blank">page 6</a></li>
     </ul>
     </div>
