--- a/breadcrumb/index.html
+++ b/breadcrumb/index.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <div class="togglearea">
+        <img class="mylogo" src="logo.png" alt="mylogo">
         <label for="toggle">
             <span></span>
             <span></span>
             <span></span>
         </label>
     </div>
-            <input type="checkbox" id="toggle">
-            <ul class="navbar">
-                <li>Home</li>
-                <li>Locations</li>
-                <li>Work</li>
-                <li>Portfolio</li>
-                <li>Contact</li>
-            </ul>
+                <input type="checkbox" id="toggle">
+                <ul class="navbar">
+                    <img class="logo" src="logo.png" alt="homelogo">
+                    <li>Home</li>
+                    <li>Locations</li>
+                    <li>Work</li>
+                    <li>Portfolio</li>
+                    <li>Contact</li>
+                </ul>
 </body>
 </html>
