--- a/index.html
+++ b/index.html
@@ -1,44 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>My Site1</title>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rajdeep Web</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
-    <link rel="icon" href="myfavicon.png" type="image/x-icon">
-    <meta name="author" content="Rajdeep Thakare">
-    <meta name="description" content="test site">
-    <meta property="og:title" content="Rajdeep Rajesh Thakare">
-    <meta property="og:description" content="this is my personal test site">
-    <meta name="twitter:title" content="twitter:test site by rajdeep">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <h1>My test list</h1><hr>
-<div class="mycol">
-    <div style="display: inline-block; text-align: center;">
-    <p>My lists:</p>
-    <ul>
-        <li><a href="breadcrumb/index.html" target="_blank">hamburger menu</a></li>
-        <li><a href="responsive.html" target="_blank">responsive</a></li>
-        <li><a href="mysite.html" target="_blank">mysite</a></li>
-        <li><a href="practice.html" target="_blank">page 1</a></li>
-        <li><a href="page2.html" target="_blank">page 2</a></li>
-        <li><a href="page3.html" target="_blank">page 3</a></li>
-        <li><a href="mailto:nowhere@mozilla.org?cc=name2@rapidtables.com&bcc=name3@rapidtables.com&subject=The%20subject%20of%20the%20email&body=The%20body%20of%20the%20email">Send mail</a></li>
-        <li><a href="myflex.html" target="_blank">myflex</a></li>
-        <li><a href="grids.html" target="_blank">grids</a></li>
-        <li><a href="flexbar.html" target="_blank">flexbar</a></li>
-    </ul>
-    </div>
-    
-
-    <div>
-    <img src="https://miro.medium.com/max/1200/1*mk1-6aYaf_Bes1E3Imhc0A.jpeg" alt="test image">
-    </div>
-    
-</div>
-<hr>
+    <nav>
+        <h1 id="headline">Rajdeep Web</h1>
+    </nav>
+        <ul id="sidemenu">
+            <li><a href="breadcrumb/index.html">Hamburger Menu</a></li>
+            <li><a href="responsive.html">Responsive</a></li>
+            <li><a href="mysite.html">My Site</a></li>
+            <li><a href="practice.html">Page 1</a></li>
+            <li><a href="page2.html">Page 2</a></li>
+            <li><a href="page3.html">Page 3</a></li>
+            <li><a href="myflex.html">Send Mail</a></li>
+            <li><a href="grids.html"> My Flex</a></li>
+            <li><a href="flexbar.html"> Flexbar</a></li>
+            <li><a href="page1.html">mypage</a></li>
+        </ul>
 </body>
 </html>
