--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h1 id="headline">Rajdeep Web</h1>
     </nav>
         <ul id="sidemenu">
-            <li><a href="breadcrumb/index.html">Hamburger Menu</a></li>
-            <li><a href="responsive.html">Responsive</a></li>
-            <li><a href="mysite.html">My Site</a></li>
-            <li><a href="practice.html">Page 1</a></li>
-            <li><a href="page2.html">Page 2</a></li>
-            <li><a href="page3.html">Page 3</a></li>
-            <li><a href="myflex.html">Send Mail</a></li>
-            <li><a href="grids.html"> My Flex</a></li>
-            <li><a href="flexbar.html"> Flexbar</a></li>
-            <li><a href="page1.html">mypage</a></li>
+            <a href="breadcrumb/index.html"><li>Hamburger Menu</li></a>
+            <a href="responsive.html"> <li>Responsive</li></a>
+            <a href="mysite.html"> <li>My Site</li></a>
+            <a href="practice.html"><li>Page 1</li></a>
+            <a href="page2.html"><li>Page 2</li></a>
+            <a href="page3.html"><li>Page 3</li></a>
+            <a href="myflex.html"><li>Send Mail</li></a>
+            <a href="grids.html"><li>My Flexba</li></a>
+            <a href="flexbar.html"><li>Flexbar</li></a>
+            <a href="page1.html"><li>mypage</li></a>
         </ul>
 </body>
 </html>
