--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <br><br><br><br>
 
         <ul id="sidemenu">
+            <a href="grid/index.html">grid</a>
             <a href="breadcrumb/index.html"><li>Hamburger Menu</li></a>
             <a href="responsive.html"> <li>Responsive</li></a>
             <a href="mysite.html"> <li>My Site</li></a>
@@ -25,6 +26,7 @@
             <a href="grids.html"><li>My Flexba</li></a>
             <a href="flexbar.html"><li>Flexbar</li></a>
             <a href="page1.html"><li>mypage</li></a>
+            
         </ul>
 </body>
 </html>
